--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -172,7 +172,8 @@
 }
 
 .page-heading {
-    font-size: 20px;
+    font-size: 24px;
+    text-align: center;
 }
 
 .post-list {
@@ -191,7 +192,7 @@
 
 .post-link {
     display: block;
-    font-size: 24px;
+    font-size: 20px;
 }
 
 
